[gd_scene load_steps=13 format=3 uid="uid://chegm7x5sl8rx"]

[ext_resource type="Script" path="res://screens/board.gd" id="1_ccqse"]
[ext_resource type="PackedScene" uid="uid://dcwtowpudpdv2" path="res://scenes/battlefield.tscn" id="2_mg76x"]
[ext_resource type="PackedScene" uid="uid://6tknyk37omdy" path="res://scenes/hand.tscn" id="3_u2ksf"]
[ext_resource type="PackedScene" uid="uid://vm1jd1gw330s" path="res://scenes/reserve.tscn" id="4_mb6ut"]
[ext_resource type="PackedScene" uid="uid://ccscfsp22jrsp" path="res://scenes/card_placeholder.tscn" id="5_brr7o"]
[ext_resource type="PackedScene" uid="uid://dwehldueqyfq5" path="res://scenes/kingdom.tscn" id="6_oavws"]
[ext_resource type="Script" path="res://screens/Instruction.gd" id="7_7kyvm"]
[ext_resource type="Script" path="res://screens/MainMenu.gd" id="8_p57cv"]
[ext_resource type="Script" path="res://screens/ActionMenu.gd" id="9_av1w1"]
[ext_resource type="Script" path="res://screens/ReshuffleMenu.gd" id="9_b0lv5"]
[ext_resource type="Script" path="res://screens/EndTurnMenu.gd" id="10_m4hdm"]
[ext_resource type="Script" path="res://screens/SupportMenu.gd" id="11_7ktw6"]

[node name="Board" type="Node"]
script = ExtResource("1_ccqse")

[node name="Battlefield" parent="." instance=ExtResource("2_mg76x")]
offset_right = 383.0
offset_bottom = 512.0
size_flags_horizontal = 0

[node name="Hand" parent="." instance=ExtResource("3_u2ksf")]
offset_left = 200.0
offset_top = 544.0
offset_right = 1352.0
offset_bottom = 736.0
scale = Vector2(0.5, 0.5)

[node name="HandLabel" type="Label" parent="."]
offset_left = 440.0
offset_top = 648.0
offset_right = 482.0
offset_bottom = 674.0
text = "Hand"

[node name="Reserve" parent="." instance=ExtResource("4_mb6ut")]
offset_left = 432.0
offset_top = 387.0
offset_right = 1392.0
offset_bottom = 579.0
scale = Vector2(0.5, 0.5)

[node name="EnemyReserve" parent="." instance=ExtResource("4_mb6ut")]
offset_left = 432.0
offset_top = 32.0
offset_right = 1392.0
offset_bottom = 224.0
scale = Vector2(0.5, 0.5)
board_area = 4

[node name="ReserveLabel" type="Label" parent="."]
offset_left = 656.0
offset_top = 488.0
offset_right = 718.0
offset_bottom = 514.0
text = "Reserve"

[node name="Graveyard" parent="." instance=ExtResource("5_brr7o")]
offset_left = 800.0
offset_top = 514.0
offset_right = 800.0
offset_bottom = 514.0
scale = Vector2(0.7, 0.7)
board_area = 0
label_text = "Graveyard"

[node name="Kingdom" parent="." instance=ExtResource("6_oavws")]
offset_left = 432.0
offset_top = 280.0
offset_right = 1392.0
offset_bottom = 472.0
scale = Vector2(0.5, 0.5)

[node name="EnemyKingdom" parent="." instance=ExtResource("6_oavws")]
offset_left = 432.0
offset_top = 136.0
offset_right = 1392.0
offset_bottom = 328.0
scale = Vector2(0.5, 0.5)

[node name="KingdomLabel" type="Label" parent="."]
offset_left = 656.0
offset_top = 240.0
offset_right = 725.0
offset_bottom = 266.0
text = "Kingdom
"

[node name="Instruction" type="Label" parent="."]
offset_left = 200.0
offset_top = 674.0
offset_right = 776.0
offset_bottom = 712.0
script = ExtResource("7_7kyvm")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MainMenu" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 376.0
offset_top = 294.0
offset_right = -376.0
offset_bottom = -296.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("8_p57cv")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/MainMenu"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MainMenu/MarginContainer"]
layout_mode = 2

[node name="GameTitle" type="Label" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Art Of War"
horizontal_alignment = 1

[node name="StartButton" type="Button" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Start Game"

[node name="JoinButton" type="Button" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Join Game"

[node name="ReshuffleMenu" type="PanelContainer" parent="CanvasLayer"]
visible = false
offset_left = 376.0
offset_top = 294.0
offset_right = 584.0
offset_bottom = 424.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("9_b0lv5")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/ReshuffleMenu"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/ReshuffleMenu/MarginContainer"]
layout_mode = 2

[node name="ReshuffleTitle" type="Label" parent="CanvasLayer/ReshuffleMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Reshuffle ?"
horizontal_alignment = 1

[node name="ReshuffleButton" type="Button" parent="CanvasLayer/ReshuffleMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Yes"

[node name="PlayButton" type="Button" parent="CanvasLayer/ReshuffleMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="ActionMenu" type="PanelContainer" parent="CanvasLayer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 320.0
offset_top = 280.0
offset_right = -320.0
offset_bottom = -280.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("9_av1w1")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/ActionMenu"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/ActionMenu/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Label" type="Label" parent="CanvasLayer/ActionMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Choose your action"
horizontal_alignment = 1

[node name="RecruitButton" type="Button" parent="CanvasLayer/ActionMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Recruit"

[node name="SupportButton" type="Button" parent="CanvasLayer/ActionMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Add Support"

[node name="AttackButton" type="Button" parent="CanvasLayer/ActionMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Attack"

[node name="EndTurnButton" type="Button" parent="CanvasLayer/ActionMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "End Turn"

[node name="EndTurnMenu" type="PanelContainer" parent="CanvasLayer"]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -470.0
offset_top = 538.0
offset_right = -295.0
offset_bottom = 668.0
grow_horizontal = 2
script = ExtResource("10_m4hdm")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/EndTurnMenu"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/EndTurnMenu/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Label" type="Label" parent="CanvasLayer/EndTurnMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Select a unit to add to your kingdom or pass."
horizontal_alignment = 1
autowrap_mode = 2

[node name="PassButton" type="Button" parent="CanvasLayer/EndTurnMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Pass"

[node name="SupportMenu" type="PanelContainer" parent="CanvasLayer"]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -470.0
offset_top = 538.0
offset_right = -295.0
offset_bottom = 668.0
grow_horizontal = 2
script = ExtResource("11_7ktw6")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/SupportMenu"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/SupportMenu/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Label" type="Label" parent="CanvasLayer/SupportMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Select a unit to use as a support or pass."
horizontal_alignment = 1
autowrap_mode = 2

[node name="PassButton" type="Button" parent="CanvasLayer/SupportMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Pass"

[connection signal="pressed" from="CanvasLayer/MainMenu/MarginContainer/VBoxContainer/StartButton" to="CanvasLayer/MainMenu" method="_on_start_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MainMenu/MarginContainer/VBoxContainer/JoinButton" to="CanvasLayer/MainMenu" method="_on_join_button_pressed"]
[connection signal="pressed" from="CanvasLayer/ReshuffleMenu/MarginContainer/VBoxContainer/ReshuffleButton" to="CanvasLayer/ReshuffleMenu" method="_on_reshuffle_button_pressed"]
[connection signal="pressed" from="CanvasLayer/ReshuffleMenu/MarginContainer/VBoxContainer/PlayButton" to="CanvasLayer/ReshuffleMenu" method="_on_play_button_pressed"]
[connection signal="pressed" from="CanvasLayer/ActionMenu/MarginContainer/VBoxContainer/RecruitButton" to="CanvasLayer/ActionMenu" method="_on_recruit_button_pressed"]
[connection signal="pressed" from="CanvasLayer/ActionMenu/MarginContainer/VBoxContainer/SupportButton" to="CanvasLayer/ActionMenu" method="_on_support_button_pressed"]
[connection signal="pressed" from="CanvasLayer/ActionMenu/MarginContainer/VBoxContainer/AttackButton" to="CanvasLayer/ActionMenu" method="_on_attack_button_pressed"]
[connection signal="pressed" from="CanvasLayer/ActionMenu/MarginContainer/VBoxContainer/EndTurnButton" to="CanvasLayer/ActionMenu" method="_on_end_turn_button_pressed"]
[connection signal="pressed" from="CanvasLayer/EndTurnMenu/MarginContainer/VBoxContainer/PassButton" to="CanvasLayer/EndTurnMenu" method="_on_pass_button_pressed"]
[connection signal="pressed" from="CanvasLayer/SupportMenu/MarginContainer/VBoxContainer/PassButton" to="CanvasLayer/SupportMenu" method="_on_pass_support_button_pressed"]
